--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "homepage": "https://github.com/VassilisPallas/mongoose-fuzzy-searching",
   "license": "MIT",
   "peerDependencies": {
-    "mongoose": "5.10.x"
+    "mongoose": "^5.10.x"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
